bases/devops/snowstorm/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snowstorm
    component: webserver
  name: snowstorm-webserver
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: snowstorm
    component: webserver
  sessionAffinity: None
  type: ClusterIP
