bases/devops/snowstorm/webserver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stats.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
  labels:
    app: snowstorm
spec:
  ingressClassName: traefik
  rules:
    - host: stats.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snowstorm-webserver
                port:
                  number: 80
  tls:
    - hosts:
        - stats.${cluster_name}.${cluster_location}.bink.sh
